--- a/net/packit/Makefile
+++ b/net/packit/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2005/04/11 21:46:57 tv Exp $
+# $NetBSD: Makefile,v 1.3 2005/07/13 14:19:38 drochner Exp $
 
 DISTNAME=	packit-1.0
+PKGREVISION=	1
 CATEGORIES=	net
 MASTER_SITES=	http://packit.sourceforge.net/downloads/
 EXTRACT_SUFX=	.tgz
