--- a/net/cdpd/Makefile
+++ b/net/cdpd/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.12 2006/04/06 06:22:31 reed Exp $
+# $NetBSD: Makefile,v 1.13 2007/01/07 09:14:02 rillig Exp $
 #
 
 DISTNAME=	cdpd-1.0.2
-#PKGREVISION=	1
+PKGREVISION=	1
 CATEGORIES=	net
 MASTER_SITES=	ftp://ftp.lexa.ru/pub/domestic/snar/
 
@@ -11,13 +11,17 @@ COMMENT=	Simple daemon to send Cisco Discovery Protocol packets
 
 GNU_CONFIGURE=	YES
 
-BUILDLINK_API_DEPENDS.libnet+=	libnet-1.0.*
-
 INSTALLATION_DIRS=	${PKGMANDIR}/man8 sbin
+
+SUBST_CLASSES+=		conf
+SUBST_STAGE.conf=       pre-configure
+SUBST_FILES.conf=       configure
+SUBST_SED.conf=         -e "s|libnet-config|libnet10-config|g"
+SUBST_MESSAGE.conf=     Fixing configuration script.
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/cdpd ${PREFIX}/sbin/cdpd
 	${INSTALL_DATA} ${WRKSRC}/cdpd.8 ${PREFIX}/${PKGMANDIR}/man8/cdpd.8
 
-.include "../../devel/libnet/buildlink3.mk"
+.include "../../devel/libnet10/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
