--- a/net/isic/Makefile
+++ b/net/isic/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.13 2005/04/11 21:46:48 tv Exp $
+# $NetBSD: Makefile,v 1.14 2005/12/05 20:50:46 rillig Exp $
 #
 
 DISTNAME=	isic-0.06
+PKGREVISION=	1
 CATEGORIES=	net
 MASTER_SITES=	http://www.packetfactory.net/Projects/ISIC/
 EXTRACT_SUFX=	.tgz
