--- a/emulators/gxemul/Makefile
+++ b/emulators/gxemul/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.26 2007/01/07 09:13:53 rillig Exp $
+# $NetBSD: Makefile,v 1.27 2007/02/07 20:00:49 joerg Exp $
 #
 
-DISTNAME=	gxemul-0.4.3
+DISTNAME=	gxemul-0.4.4
 CATEGORIES=	emulators
 MASTER_SITES=	http://gavare.se/gxemul/src/
 
