--- a/lang/ucblogo/Makefile
+++ b/lang/ucblogo/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2006/03/04 21:29:57 jlam Exp $
+# $NetBSD: Makefile,v 1.18 2006/09/09 02:43:10 obache Exp $
 
 DISTNAME=	ucblogo-5.3
 PKGREVISION=	2
@@ -22,7 +22,9 @@ post-install:
 	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/ucblogo/html
 	${CP} ${WRKSRC}/emacs/docs/*.html ${PREFIX}/share/doc/ucblogo/html/
 
-.include "../../devel/ncurses/buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
+BUILDLINK_DEPMETHOD.libXt?=	build
 
+.include "../../devel/ncurses/buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
