--- a/math/xlispstat/Makefile
+++ b/math/xlispstat/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.19 2006/02/05 23:10:04 joerg Exp $
+# $NetBSD: Makefile,v 1.20 2006/03/04 21:30:09 jlam Exp $
 
 DISTNAME=		xlispstat-3-52-18
 PKGNAME=		xlispstat-3.52.18
@@ -26,5 +26,8 @@ MAKE_ENV+=		CPPFLAGS=
 
 MAKE_ENV+=		DISPLAY=	# Prevent 'Rejected connection'
 
-.include "../../mk/x11.buildlink3.mk"
+BUILDLINK_DEPMETHOD.libXt?=	build
+
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
