--- a/math/vista/Makefile
+++ b/math/vista/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2006/03/04 21:30:08 jlam Exp $
+# $NetBSD: Makefile,v 1.15 2006/10/04 21:47:58 wiz Exp $
 #
 
 DISTNAME=	vista
@@ -17,5 +17,4 @@ WRKSRC=		${WRKDIR}/vista-5.0.5
 USE_X11BASE=	yes
 USE_TOOLS+=	gmake
 
-.include "../../mk/x11.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
