--- a/math/xgap/Makefile
+++ b/math/xgap/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2005/12/05 20:50:37 rillig Exp $
+# $NetBSD: Makefile,v 1.15 2006/02/05 23:10:04 joerg Exp $
 #
 
 DISTNAME=	xgap4r16
@@ -36,6 +36,6 @@ do-install:
 		cd ${WRKSRC} && ${PAX} -rw $$I ${GAP_PKG_DIRECTORY};	\
 		done
 
-.include "../../mk/x11.buildlink3.mk"
 .include "../../math/gap/gap.package.mk"
+.include "../../x11/libXaw/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
