--- a/net/xipdump/Makefile
+++ b/net/xipdump/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.24 2006/09/03 00:56:30 wiz Exp $
+# $NetBSD: Makefile,v 1.25 2007/02/18 18:55:17 adrianp Exp $
 #
 
 DISTNAME=	xipdump-1.5.4
@@ -29,5 +29,5 @@ post-build:
 	@${ECHO} "@dirrm share/xipdump" >> ${PLIST_SRC}
 
 .include "../../devel/libnet10/buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libXaw/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
