--- a/www/lighttpd/Makefile
+++ b/www/lighttpd/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.11 2006/07/07 15:49:34 jlam Exp $
+# $NetBSD: Makefile,v 1.12 2006/12/22 21:07:11 joerg Exp $
 
-DISTNAME=	lighttpd-1.4.11
-PKGREVISION=	1
+DISTNAME=	lighttpd-1.4.13
 CATEGORIES=	www
 MASTER_SITES=	http://www.lighttpd.net/download/
 
