--- a/sysutils/wbm-change-user/Makefile
+++ b/sysutils/wbm-change-user/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2006/05/16 15:41:56 jlam Exp $
+# $NetBSD: Makefile,v 1.1.1.1 2006/05/16 17:36:16 jlam Exp $
 
 DISTNAME=	change-user
 PKGNAME=	wbm-${DISTNAME}-${WBM_VERSION}
@@ -9,6 +9,8 @@ WBM_VERSION=	1.270
 
 HOMEPAGE=	http://www.webmin.com/standard.html
 COMMENT=	Webmin module to personalize Webmin user sessions
+
+BROKEN=		"Distfile broken"
 
 .include "../../sysutils/webmin/wbm.mk"
 .include "../../mk/bsd.pkg.mk"
