--- a/x11/wxGTK24/Makefile.common
+++ b/x11/wxGTK24/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.2 2005/08/10 20:56:30 jlam Exp $
+# $NetBSD: Makefile.common,v 1.3 2005/12/05 20:51:19 rillig Exp $
 #
 
 DISTNAME=		wxGTK-2.4.2
@@ -46,4 +46,3 @@ PLIST_SUBST+=		GTKVER=2
 .include "../../x11/gtk2/buildlink3.mk"
 
 .include "../../mk/pthread.buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
