--- a/www/awstats/Makefile
+++ b/www/awstats/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.30 2007/02/15 15:00:21 rillig Exp $
+# $NetBSD: Makefile,v 1.31 2007/02/20 16:44:50 joerg Exp $
 #
 
 DISTNAME=	awstats-6.6
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	www
 MASTER_SITES=	http://awstats.sourceforge.net/files/
 # awstats are in the habit of updating the tarball but not incrementing
