--- a/mk/platform/Darwin.pkg.dist
+++ b/mk/platform/Darwin.pkg.dist
@@ -1,5 +1,5 @@
 #     Id: BSD.local.dist,v 1.30 1997/08/01 13:16:39 phk Exp
-#	$NetBSD: Darwin.pkg.dist,v 1.26 2006/12/19 17:54:50 wiz Exp $
+#	$NetBSD: Darwin.pkg.dist,v 1.27 2007/01/24 19:52:08 wiz Exp $
 #
 
 /set type=dir uname=root gname=wheel mode=0755
@@ -497,6 +497,10 @@
         ..
         doc
 	    html
+	    ..
+        ..
+        emacs
+	    site-lisp
 	    ..
         ..
         examples
