--- a/mk/platform/IRIX.x11.dist
+++ b/mk/platform/IRIX.x11.dist
@@ -1,4 +1,4 @@
-#     $NetBSD: IRIX.x11.dist,v 1.7 2006/04/09 12:37:01 wiz Exp $
+#     $NetBSD: IRIX.x11.dist,v 1.8 2006/12/19 17:54:51 wiz Exp $
 #     FreeBSD Id: BSD.x11.dist,v 1.2 1997/06/10 07:55:10 asami Exp
 #
 
@@ -260,6 +260,10 @@
         doc
             html
             ..
+        ..
+        emacs
+	    site-lisp
+	    ..
         ..
         examples
         ..
