--- a/devel/ftnchek/Makefile
+++ b/devel/ftnchek/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.14 2005/11/08 03:36:58 tv Exp $
+# $NetBSD: Makefile,v 1.15 2006/03/04 21:29:15 jlam Exp $
 
 DISTNAME=	ftnchek-3.2.2
+PKGREVISION=	1
 CATEGORIES=	devel
 MASTER_SITES=	http://www.dsm.fordham.edu/~ftnchek/download/
 EXTRACT_SUFX=	.tar.bz2
