--- a/lang/oo2c/Makefile
+++ b/lang/oo2c/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.20 2006/03/04 21:29:55 jlam Exp $
+# $NetBSD: Makefile,v 1.21 2006/11/12 01:43:21 rillig Exp $
 
 DISTNAME=		oo2c_${BITS}-2.0.11
 PKGNAME=		oo2c-2.0.11
-PKGREVISION=		7
+PKGREVISION=		8
 CATEGORIES=		lang
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=ooc/}
 EXTRACT_SUFX=		.tar.bz2
