--- a/math/aribas/Makefile
+++ b/math/aribas/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.15 2006/03/04 21:30:02 jlam Exp $
+# $NetBSD: Makefile,v 1.16 2007/01/07 09:13:59 rillig Exp $
 
 DISTNAME=	aribas-1.53
+PKGREVISION=	1
 CATEGORIES=	math
 MASTER_SITES=	ftp://ftp.mathematik.uni-muenchen.de/pub/forster/aribas/
 
