--- a/devel/librsync/Makefile
+++ b/devel/librsync/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.13 2006/02/05 23:08:45 joerg Exp $
+# $NetBSD: Makefile,v 1.14 2006/03/04 21:29:17 jlam Exp $
 
 DISTNAME=	librsync-0.9.7
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	devel net
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=librsync/}
 
