--- a/filesystems/Makefile
+++ b/filesystems/Makefile
@@ -1,6 +1,11 @@
-# $NetBSD: Makefile,v 1.13 2006/07/11 12:59:43 wiz Exp $
+# $NetBSD: Makefile,v 1.1 2007/02/20 22:48:07 agc Exp $
 #
 
 COMMENT=	File systems, and file system related packages
+
+SUBDIR+=	fuse-cddafs
+SUBDIR+=	fuse-cryptofs
+SUBDIR+=	fuse-curlftpfs
+SUBDIR+=	fuse-lzofs
 
 .include "../mk/bsd.pkg.subdir.mk"
