--- a/filesystems/Makefile
+++ b/filesystems/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.1 2007/02/20 22:48:07 agc Exp $
+# $NetBSD: Makefile,v 1.2 2007/02/20 23:08:00 xtraeme Exp $
 #
 
 COMMENT=	File systems, and file system related packages
 
-SUBDIR+=	fuse-cddafs
+SUBDIR+=	fuse-cddfs
 SUBDIR+=	fuse-cryptofs
 SUBDIR+=	fuse-curlftpfs
 SUBDIR+=	fuse-lzofs
