--- a/filesystems/Makefile
+++ b/filesystems/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.4 2007/02/20 23:33:02 xtraeme Exp $
+# $NetBSD: Makefile,v 1.5 2007/02/20 23:45:36 xtraeme Exp $
 #
 
 COMMENT=	File systems, and file system related packages
 
+SUBDIR+=	fuse
 SUBDIR+=	fuse-archivemount
 SUBDIR+=	fuse-cddfs
 SUBDIR+=	fuse-cryptofs
