--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.811 2007/02/18 18:38:09 adrianp Exp $
+# $NetBSD: Makefile,v 1.812 2007/02/21 21:08:14 minskim Exp $
 #
 
 COMMENT=	Development utilities
@@ -223,6 +223,7 @@ SUBDIR+=	jam
 SUBDIR+=	javacc
 SUBDIR+=	javadeps
 SUBDIR+=	jgrasp
+SUBDIR+=	jflex
 SUBDIR+=	kdbg
 SUBDIR+=	kdesdk3
 SUBDIR+=	kdevelop
