--- a/www/p5-HTML-Element-Extended/Makefile
+++ b/www/p5-HTML-Element-Extended/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2006/03/04 21:31:01 jlam Exp $
+# $NetBSD: Makefile,v 1.4 2006/10/06 08:19:47 rillig Exp $
 
-DISTNAME=		HTML-Element-Extended-1.14
+DISTNAME=		HTML-Element-Extended-1.17
 PKGNAME=		p5-${DISTNAME}
-PKGREVISION=		1
 CATEGORIES=		www perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=HTML/}
 #			${MASTER_SITE_PERL_CPAN:=../by-authors/id/M/MS/MSISK/}
