--- a/devel/p5-Class-MethodMaker/Makefile
+++ b/devel/p5-Class-MethodMaker/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.10 2005/10/20 17:41:09 abs Exp $
+# $NetBSD: Makefile,v 1.11 2006/03/04 21:29:19 jlam Exp $
 #
 
-DISTNAME=		Class-MethodMaker-2.07
+DISTNAME=		Class-MethodMaker-2.09
 PKGNAME=		p5-${DISTNAME}
 CATEGORIES=		devel perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Class/}
