--- a/textproc/p5-Convert-BER/Makefile
+++ b/textproc/p5-Convert-BER/Makefile
@@ -1,15 +1,14 @@
-# $NetBSD: Makefile,v 1.17 2006/03/04 21:30:47 jlam Exp $
+# $NetBSD: Makefile,v 1.18 2006/10/24 13:50:07 obache Exp $
 #
 
-DISTNAME=	Convert-BER-1.31
+DISTNAME=	Convert-BER-1.3101
 PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5ber
-PKGREVISION=	2
 CATEGORIES=	textproc perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Convert/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://search.cpan.org/~gbarr/Convert-BER/
+HOMEPAGE=	http://search.cpan.org/dist/Convert-BER/
 COMMENT=	Perl class to encode/decode objects using Basic Encoding Rules
 
 PERL5_PACKLIST=		auto/Convert/BER/.packlist
