--- a/security/p5-Crypt-DSA/Makefile
+++ b/security/p5-Crypt-DSA/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.15 2005/08/06 06:19:29 jlam Exp $
+# $NetBSD: Makefile,v 1.16 2006/02/15 20:42:54 heinz Exp $
 #
 
-DISTNAME=		Crypt-DSA-0.13
+DISTNAME=		Crypt-DSA-0.14
 PKGNAME=		p5-${DISTNAME}
 SVR4_PKGNAME=		p5dsa
 CATEGORIES=		security perl5
