--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.346 2007/01/29 16:43:59 minskim Exp $
+# $NetBSD: Makefile,v 1.347 2007/02/22 12:22:31 wiz Exp $
 #
 
 COMMENT=	Text processing utilities (does not include desktop publishing)
@@ -208,6 +208,7 @@ SUBDIR+=	p5-XML-DOM
 SUBDIR+=	p5-XML-Dumper
 SUBDIR+=	p5-XML-Encoding
 SUBDIR+=	p5-XML-Filter-BufferText
+SUBDIR+=	p5-XML-Filter-DOMFilter-LibXML
 SUBDIR+=	p5-XML-Filter-DetectWS
 SUBDIR+=	p5-XML-Filter-Reindent
 SUBDIR+=	p5-XML-Filter-SAXT
