--- a/graphics/ImageMagick/Makefile.common
+++ b/graphics/ImageMagick/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.69 2007/02/15 08:05:52 adam Exp $
+# $NetBSD: Makefile.common,v 1.70 2007/02/20 08:17:58 adam Exp $
 
 ###########################################################################
 #
@@ -21,6 +21,7 @@ DISTSUFFIX=	${IM_MAJOR_VER}
 
 DISTNAME=	ImageMagick-${DISTSUFFIX}
 DISTVERSION=	${DISTSUFFIX:S/-/./}
+DIST_SUBDIR=	${PKGNAME_NOREV}
 
 CATEGORIES=	graphics
 MASTER_SITES=	ftp://ftp.imagemagick.net/pub/ImageMagick/ \
