--- a/databases/p5-MLDBM/Makefile
+++ b/databases/p5-MLDBM/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.21 2005/08/06 06:19:07 jlam Exp $
+# $NetBSD: Makefile,v 1.22 2006/03/04 21:29:10 jlam Exp $
 #
 
 DISTNAME=		MLDBM-2.01
@@ -9,10 +9,10 @@ CATEGORIES=		databases perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=MLDBM/}
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
-HOMEPAGE=		http://theory.uwinnipeg.ca/CPAN/data/MLDBM/MLDBM.html
+HOMEPAGE=		http://search.cpan.org/dist/MLDBM/
 COMMENT=		Perl5 module for storing arbitrary data in tied hashes
 
-DEPENDS+= 		{p5-Data-Dumper>=2.08,perl{,-thread}>=5.6.1nb2}:../../lang/perl5
+DEPENDS+=	{p5-Data-Dumper>=2.08,perl{,-thread}>=5.6.1nb2}:../../lang/perl5
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
