--- a/www/haskell-cgi/Makefile
+++ b/www/haskell-cgi/Makefile
@@ -1,18 +1,18 @@
-# $NetBSD: Makefile,v 1.8 2005/09/28 12:23:19 rillig Exp $
+# $NetBSD: Makefile,v 1.9 2006/03/04 21:30:58 jlam Exp $
 
 DISTNAME=	haskell-cgi-20001206
 CATEGORIES=	www
 MASTER_SITES=	${MASTER_SITE_LOCAL}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://www.informatik.uni-muenchen.de/~Sven.Panne/haskell_libs/CGI.html
+# HOMEPAGE=	http://www.informatik.uni-muenchen.de/~Sven.Panne/haskell_libs/CGI.html
 COMMENT=	CGI module for the Hugs Haskell 98 interpreter
 
 DEPENDS+=	hugs98-[0-9]*:../../lang/hugs
 
 NO_SRC_ON_FTP=	Already in MASTER_SITE_LOCAL
 
-NO_BUILD= 	yes
+NO_BUILD=	yes
 
 HUGS_PREFIX_DEFAULT=	${LOCALBASE}
 EVAL_PREFIX+=	HUGS_PREFIX=hugs
